# monadic-modeling-test

./: Builder.hs  Classes.hs  Dae.hs  DaeBuilder.hs  Estimator.hs  Expr.hs  KinematicMekf.hs  LogsAndErrors.hs  Modeling.hs  RocketDae.hs  Utils.hs  Woo.hs  monadic-modeling.cabal
