name:                monadic-modeling
version:             0.0.1.0
stability:           Experimental
synopsis:            Modeling environment for dynamic systems, controllers, estimators
--description:{
--This package intends to make it relatively easy to do simple 3d graphics using high-level primitives.
--It is inspired by gloss and attempts to emulate it.
--This is an early release and the api will certainly change.
--Note that transparency can be controlled by the alpha value: "makeColor r g b alpha" but that you must draw objects from back to front for transparency to properly work (just put clear things last).
--Also, transparent ellipsoids and cylinders have ugly artifacts, sorry.
--Look at the complimentary package not-gloss-examples to get started.
--}
license:             BSD3
license-file:        LICENSE
author:              Greg Horn
maintainer:          gregmainland@gmail.com
-- copyright:           
--category:            Graphics
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Modeling
                       LogsAndErrors
                       Utils

  other-modules:       

  build-depends:       base >= 4.5 && < 5,
                       containers >= 0.5.0.0,
                       mtl >= 2.1.2,
                       lens >= 3.9.0,
                       hashable >= 1.2.0,
                       dvda >= 0.4

--  ghc-options: -O2

--source-repository head
--  type:     git
--  location: git://github.com/ghorn/monadic-modeling-test.git
